--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
-<html>
-  <body>
-    <h1>My Resume</h1>
-    <br>
-  </body>
+<!doctype html>
+<html lang="en">
+ <head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+ </head>
+ <body>
+  <div>
+    asdas
+  </div>
+ </body>
 </html>
